crates/server-less/tests/fixtures/typo_suggestion_cli.stderr
error: unknown argument `naem` — did you mean `name`?

       Valid arguments: name, version, description, homepage, global, defaults, no_sync, no_async

       Example: #[cli(name = "my-app", description = "My CLI tool")]
       Bare flags: #[cli(no_sync)] or #[cli(no_async)]

       Related: #[program] preset (CLI + markdown docs), #[markdown] (standalone docs)
 --> tests/fixtures/typo_suggestion_cli.rs:7:7
  |
7 | #[cli(naem = "my-tool")]
  |       ^^^^
